; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/cirrus/extr_ep93xx-i2s.c_ep93xx_i2s_dai_probe.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/cirrus/extr_ep93xx-i2s.c_ep93xx_i2s_dai_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_dai = type { %struct.TYPE_3__*, %struct.TYPE_4__* }
%struct.TYPE_3__ = type { i32* }
%struct.TYPE_4__ = type { i32* }
%struct.ep93xx_i2s_info = type { %struct.TYPE_3__, %struct.TYPE_4__ }

@ep93xx_i2s_dma_data = common dso_local global i32* null, align 8
@SNDRV_PCM_STREAM_PLAYBACK = common dso_local global i64 0, align 8
@SNDRV_PCM_STREAM_CAPTURE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_dai*)* @ep93xx_i2s_dai_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ep93xx_i2s_dai_probe(%struct.snd_soc_dai* %0) #0 {
  %2 = alloca %struct.snd_soc_dai*, align 8
  %3 = alloca %struct.ep93xx_i2s_info*, align 8
  store %struct.snd_soc_dai* %0, %struct.snd_soc_dai** %2, align 8
  %4 = load %struct.snd_soc_dai*, %struct.snd_soc_dai** %2, align 8
  %5 = call %struct.ep93xx_i2s_info* @snd_soc_dai_get_drvdata(%struct.snd_soc_dai* %4)
  store %struct.ep93xx_i2s_info* %5, %struct.ep93xx_i2s_info** %3, align 8
  %6 = load i32*, i32** @ep93xx_i2s_dma_data, align 8
  %7 = load i64, i64* @SNDRV_PCM_STREAM_PLAYBACK, align 8
  %8 = getelementptr inbounds i32, i32* %6, i64 %7
  %9 = load %struct.ep93xx_i2s_info*, %struct.ep93xx_i2s_info** %3, align 8
  %10 = getelementptr inbounds %struct.ep93xx_i2s_info, %struct.ep93xx_i2s_info* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  store i32* %8, i32** %11, align 8
  %12 = load i32*, i32** @ep93xx_i2s_dma_data, align 8
  %13 = load i64, i64* @SNDRV_PCM_STREAM_CAPTURE, align 8
  %14 = getelementptr inbounds i32, i32* %12, i64 %13
  %15 = load %struct.ep93xx_i2s_info*, %struct.ep93xx_i2s_info** %3, align 8
  %16 = getelementptr inbounds %struct.ep93xx_i2s_info, %struct.ep93xx_i2s_info* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  store i32* %14, i32** %17, align 8
  %18 = load %struct.ep93xx_i2s_info*, %struct.ep93xx_i2s_info** %3, align 8
  %19 = getelementptr inbounds %struct.ep93xx_i2s_info, %struct.ep93xx_i2s_info* %18, i32 0, i32 1
  %20 = load %struct.snd_soc_dai*, %struct.snd_soc_dai** %2, align 8
  %21 = getelementptr inbounds %struct.snd_soc_dai, %struct.snd_soc_dai* %20, i32 0, i32 1
  store %struct.TYPE_4__* %19, %struct.TYPE_4__** %21, align 8
  %22 = load %struct.ep93xx_i2s_info*, %struct.ep93xx_i2s_info** %3, align 8
  %23 = getelementptr inbounds %struct.ep93xx_i2s_info, %struct.ep93xx_i2s_info* %22, i32 0, i32 0
  %24 = load %struct.snd_soc_dai*, %struct.snd_soc_dai** %2, align 8
  %25 = getelementptr inbounds %struct.snd_soc_dai, %struct.snd_soc_dai* %24, i32 0, i32 0
  store %struct.TYPE_3__* %23, %struct.TYPE_3__** %25, align 8
  ret i32 0
}

declare dso_local %struct.ep93xx_i2s_info* @snd_soc_dai_get_drvdata(%struct.snd_soc_dai*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
